--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - image: circleci/node:8.9
     environment:
       - ANSIBLE_HOST_KEY_CHECKING: false
-    working_directory: /tmp/pu-organization  
+    working_directory: /tmp/charge
     steps:
       - run: |
           sudo apt-get update &&
@@ -58,7 +58,7 @@ jobs:
       - image: circleci/node:8.9
     environment:
       - ANSIBLE_HOST_KEY_CHECKING: false
-    working_directory: /tmp/pu-organization  
+    working_directory: /tmp/charge
     steps:
       - run: |
           sudo apt-get update &&
