--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ workflows:
   version: 2
   build-deploy:
     jobs:
-      #- build
+      - build
       - deploy-develop:
           requires:
           filters:
