--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,8 +75,10 @@ workflows:
   version: 2
   build-deploy:
     jobs:
+      - build
       - deploy-develop:
           requires:
+            - build
           filters:
             branches:
               only: develop
