--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/PaidUp/PUCharge#readme",
   "dependencies": {
+    "moment": "^2.22.2",
     "mongodb": "^3.0.4",
-    "pu-common": "git+ssh://git@github.com:PaidUp/PUCommon.git#0.16.1",
+    "node-schedule": "^1.3.0",
+    "numeral": "^2.0.6",
+    "pu-common": "git+ssh://git@github.com:PaidUp/PUCommon.git#0.19.11",
     "sqs": "^2.0.2",
     "stripe": "^5.5.0"
   },
