--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-schedule": "^1.3.0",
     "numeral": "^2.0.6",
     "pu-common": "git+ssh://git@github.com:PaidUp/PUCommon.git#0.19.11",
+    "randomstring": "^1.1.5",
     "sqs": "^2.0.2",
     "stripe": "^5.5.0"
   },
