--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.10",
     "node-schedule": "^1.3.0",
+    "node-zendesk": "^1.4.0",
     "numeral": "^2.0.6",
     "pu-common": "git+ssh://git@github.com:PaidUp/PUCommon.git#0.19.11",
     "randomstring": "^1.1.5",
